--- a/research/object_detection/.gitignore
+++ b/research/object_detection/.gitignore
@@ -9,4 +9,5 @@ training/*
 !training/labelmap.pbtxt
 output_inference_graph/*
 !output_inference_graph/pipeline.config
-
+images/*
+!images/.gitkeep
