--- a/research/object_detection/output_inference_graph/pipeline.config
+++ b/research/object_detection/output_inference_graph/pipeline.config
@@ -91,15 +91,15 @@ train_config {
         manual_step_learning_rate {
           initial_learning_rate: 0.00019999999
           schedule {
-            step: 1
-            learning_rate: 0.00019999999
-          }
-          schedule {
-            step: 9000
+            step: 1000
             learning_rate: 1.9999999e-05
           }
           schedule {
-            step: 12000
+            step: 90000
+            learning_rate: 1.9999999e-05
+          }
+          schedule {
+            step: 120000
             learning_rate: 2e-06
           }
         }
@@ -109,9 +109,9 @@ train_config {
     use_moving_average: false
   }
   gradient_clipping_by_norm: 10.0
-  fine_tune_checkpoint: "/home/yuria/github/yuriapxlt/models/research/object_detection/faster_rcnn_inception_v2_coco_2018_01_28/model.ckpt"
+  fine_tune_checkpoint: "/home/yuria/github/yuriapxlt/models/research/object_detection/output_checkpoint/model.ckpt"
   from_detection_checkpoint: true
-  num_steps: 15000
+  num_steps: 200000
 }
 train_input_reader {
   label_map_path: "/home/yuria/github/yuriapxlt/models/research/object_detection/training/labelmap.pbtxt"
@@ -120,7 +120,7 @@ train_input_reader {
   }
 }
 eval_config {
-  num_examples: 800
+  num_examples: 8000
   max_evals: 10
   use_moving_averages: false
 }
