--- a/research/object_detection/training/faster_rcnn_inception_v2_coco_pipeline.config
+++ b/research/object_detection/training/faster_rcnn_inception_v2_coco_pipeline.config
@@ -91,7 +91,7 @@ train_config {
         manual_step_learning_rate {
           initial_learning_rate: 0.000199999994948
           schedule {
-            step: 1
+            step: 1000
             learning_rate: 0.0000199999994948
           }
           schedule {
@@ -109,7 +109,8 @@ train_config {
     use_moving_average: false
   }
   gradient_clipping_by_norm: 10.0
-  fine_tune_checkpoint: "/home/yuria/github/yuriapxlt/models/research/object_detection/faster_rcnn_inception_v2_coco_2018_01_28/model.ckpt"
+  fine_tune_checkpoint: "/home/yuria/github/yuriapxlt/models/research/object_detection/output_checkpoint/model.ckpt"
+  #fine_tune_checkpoint: "/home/yuria/github/yuriapxlt/models/research/object_detection/faster_rcnn_inception_v2_coco_2018_01_28/model.ckpt"
   from_detection_checkpoint: true
   num_steps: 200000
 }
